<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_set_line">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/set_main_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/set_display_current_interval"/>

        <EditText
            android:id="@+id/et_interval"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="17sp"

            android:textColor="@color/set_main_color"
            android:background="@drawable/item_rate_time_border"  android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/tvRead"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/set_rote_read"
        android:background="@drawable/btn_blue"/>
    <TextView
        android:id="@+id/tvNext"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/set_main_color"
        android:text="@string/set_rote_set"
        android:background="@drawable/tv_blue_border"/>

</LinearLayout>