<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_set_line"
    android:orientation="vertical">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/set_main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/read_time_current_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/item_rate_time_border"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRead"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:text="@string/set_rote_read"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvWrite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/tv_blue_border"
        android:gravity="center"
        android:text="@string/set_rote_set"
        android:textColor="@color/set_main_color"
        android:textSize="26sp" />

</LinearLayout>