<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_set_line"
    >

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/set_main_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/set_rote_confirmation_time"/>

        <TextView
            android:id="@+id/timeset"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/item_rate_time_border"
            android:gravity="center"
            android:text="2019-12-10 00:00:00"
            android:textColor="@color/black"
            android:textSize="17sp" />


        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"

            android:layout_height="40dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/fee"/>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:entries="@array/spingarr"
            android:background="@drawable/item_rate_time_border"
            android:gravity="center_vertical"
            android:textAlignment="center"

            android:visibility="visible" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvRead"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:text="@string/set_rote_confirm"
        android:background="@drawable/btn_blue"/>

</LinearLayout>