<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_set_line">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/set_main_color" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@color/white">
                <com.cblong.xrecyclerview.XRecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></com.cblong.xrecyclerview.XRecyclerView>
            </RelativeLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="218dp"
                android:orientation="vertical"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="38dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:text="@string/set_rote_addtime"/>
                </LinearLayout>
                <com.cblong.xrecyclerview.XRecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></com.cblong.xrecyclerview.XRecyclerView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/white"></LinearLayout>

            <TextView
                android:id="@+id/tvRead"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:text="@string/set_rote_read"
                android:background="@drawable/btn_blue"/>
            <TextView
                android:id="@+id/tvNext"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/set_main_color"
                android:text="@string/set_rote_next"
                android:background="@drawable/tv_blue_border"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>