<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hexing.libhexbase.view.HeaderLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/set_main_color" />

    <LinearLayout
        android:id="@+id/layEdit1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/headerLayout"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|bottom|left"
                android:text="@string/set_apn"
                android:textColor="@color/set_main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etApn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|bottom|right"
                android:textColor="@color/color_a0a0a0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/set_main_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layEdit2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/layEdit1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center|bottom|left"
                android:text="@string/set_ip"
                android:textColor="@color/set_main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etIp1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/color_a0a0a0"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="." />

            <EditText
                android:id="@+id/etIp2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/color_a0a0a0"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="." />

            <EditText
                android:id="@+id/etIp3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/color_a0a0a0"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="." />

            <EditText
                android:id="@+id/etIp4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/color_a0a0a0"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/set_main_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layEdit3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/layEdit2"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|bottom|left"
                android:text="@string/set_port"
                android:textColor="@color/set_main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|bottom|right"
                android:inputType="number"
                android:textColor="@color/color_a0a0a0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/set_main_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layEdit4"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/layEdit3"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|bottom|left"
                android:text="SMS"
                android:textColor="@color/set_main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etsms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|bottom|right"
                android:textColor="@color/color_a0a0a0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/set_main_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layEdit5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/layEdit4"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|bottom|left"
                android:text="@string/set_pdp_username"
                android:textColor="@color/set_main_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPdpUsername"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|bottom|right"
                android:textColor="@color/color_a0a0a0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/set_main_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layEdit6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/layEdit5"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|bottom|left"
                android:text="@string/set_pdp_password"
                android:textColor="@color/colorMain"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etPdpPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|bottom|right"
                android:textColor="@color/color_a0a0a0"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/set_main_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRead"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/tvSet"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:text="@string/set_rote_read"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvSet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/tv_blue_border"
        android:gravity="center"
        android:text="@string/set_rote_set"
        android:textColor="@color/set_main_color"
        android:textSize="26sp" />

</RelativeLayout>
